Fix styling of progress text on ClipProgressPanel, disable clip Button if the PdfScreenshotResult hasn't come back yet, and remove the text underneath the spinner when the PdfPreview is loading because its the wrong string

--- a/src/styles/previewStyles.less
+++ b/src/styles/previewStyles.less
@@ -253,7 +253,7 @@
 					color: rgba(255,255,255,0.70);
 					line-height: 20px;
 					outline: none;
-					-webkit-user-select: auto;
+					user-select: auto;
 					
 					&.invalid {
 						border: #b94a48 1px solid;
